--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,8 @@
     integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q"
     crossorigin="anonymous"
   />
-  <link href="https://fonts.googleapis.com/css2?family=Karla:wght@300;400;500;600&display=swap" rel="stylesheet">
-
-
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Karla:wght@300;400;500;600&display=swap" rel="stylesheet"> -->
+<link href="https://fonts.cdnfonts.com/css/euclid-flex" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
